<resources>
    <string name="app_name">EducationQuiz</string>
    <string name="personal_info">Personal Information</string>
    <string name="name">Please enter your name</string>
    <string name="name_hint">Surname MiddleName LastName</string>
    <string name="age">Age</string>
    <string name="age_hint">eg: 18</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nation">Country of Residence</string>
    <string name="nation_hint">eg: Nigeria</string>
    <string name="quiz_header">Quiz Questions.</string>
    <string name="question_one">1) Tick the boxes of all programming languages</string>
    <string name="optionOneA">Java</string>
    <string name="optionOneB">Python</string>
    <string name="optionOneC">Jaguar</string>
    <string name="optionOneD">Kotlin</string>
    <string name="question_two">2) The Android version name Nougat is for which of these versions?</string>
    <string name="optionTwoA">5</string>
    <string name="optionTwoB">6</string>
    <string name="optionTwoC">7</string>
    <string name="optionTwoD">8</string>
    <string name="question_three">3) Android Studio application was developed by two companies: Google and</string>
    <string name="quest_three_hint">.....................?</string>
    <string name="question_four">4) Tick the boxes of all input devices</string>
    <string name="optionFourA">Microphone</string>
    <string name="optionFourB">Printer</string>
    <string name="optionFourC">Keyboard</string>
    <string name="optionFourD">Speaker</string>
    <string name="question_five">5) One of these is the name of an operating system</string>
    <string name="optionFiveA">Dell</string>
    <string name="optionFiveB">Windows XP</string>
    <string name="optionFiveC">Yahoo</string>
    <string name="optionFiveD">Microsoft</string>
    <string name="question_six">6) Tick the boxes of all output devices</string>
    <string name="optionSixA">Scanner</string>
    <string name="optionSixB">Printer</string>
    <string name="optionSixC">Mouse</string>
    <string name="optionSixD">Monitor</string>
    <string name="question_seven">7) Which one of these devices will allow a user to move the pointer on a monitor</string>
    <string name="optionSevenA">Mouse</string>
    <string name="optionSevenB">Speaker</string>
    <string name="optionSevenC">Icon</string>
    <string name="optionSevenD">Diskette</string>
    <string name="submit">Submit</string>
</resources>
